<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GroceryDroid</string>
    <string name="main_screen_prompt_default">Tap + above to start</string>
    <string name="main_screen_prompt_lists_present">Choose a list</string>
    <string name="shopping_list_prompt_default">Tap + to add an item</string>
    <string name="shopping_list_prompt_items_present">Choose an item</string>
    <string name="add_list_prompt">Enter name of list</string>
    <string name="save">Save</string>
    <string name="add_list_name_hint">Name of list</string>
    <string name="total_spent">Total spent:</string>
    <string name="shopping_list_title">Shopping list - </string>
    <string name="item_name">Item name</string>
    <string name="item_number_to_stock_prompt">Number to stock:</string>
    <string name="item_unit_size_prompt">Size:</string>
    <string name="item_unit_label_prompt">Unit:</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="stock_title">Stock list</string>
    <string name="confirm_delete_list">Are you sure you want to delete this whole list?</string>
    <string name="confirm_delete_item">Are you sure you want to delete this item?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="main_instructions">Choose a shopping list</string>
    <string name="show_all">Show all</string>
    <string name="hide_bought">Hide bought</string>
    <string name="choose_action_for_list">What would you like to do with this list?</string>
    <string name="stock_menu_item_add_item">Add item</string>
    <string name="stock_menu_item_go_shopping">Go shopping</string>
    <string name="stock_menu_item_reset_all">Reset all to buy 0</string>
    <string name="shop_menu_item_add_item">Add item</string>
    <string name="shop_menu_item_reset_all">Reset list</string>
    <string name="shop_layout_total_spent_text">Spent this much money on list</string>
    <string name="shop_menu_show_bought_items">Show bought items</string>
    <string name="shop_menu_hide_bought_items">Hide bought items</string>
    <string name="grabber_icon">Grabber icon</string>
    <string name="sort_by_stock_order_activity_prompt_no_lists">No items to re-arrange</string>
    <string name="sort_by_stock_order_activity_prompt_lists_present">Drag items to match the order of your kitchen</string>
    <string name="sort_by_shop_order_activity_prompt_lists_present">Drag items to match the order of the store</string>
    <string name="sort_menu_save_order">Save</string>
    <string name="stock_menu_item_sort_items">Rearrange items</string>
    <string name="shop_menu_item_sort_items">Rearrange items</string>
    <string name="item_fragment_dialog_name_prompt">Name:</string>
    <string name="stock_menu_item_load_items_from_spreadsheet">Load from spreadsheet</string>
</resources>